--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,18 @@
 [tool.poetry]
-name = "python-template"
-version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+name = "Posr>"
+version = "0.3.5"
+description = "A OSR tool for performing Domain, IP, and File Hash analysis"
+authors = ["Casey Mauldin <dw4pres@gmail.com>"]
+readme = "README.md"
+requires-python = ">=3.8"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+[project.urls]
+"Homepage" = "https://github.com/2minCS/Posr"
+"Bug Tracker" = "https://github.com/2minCS/Posr/issues"
 
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.9"
